[gd_scene load_steps=7 format=3 uid="uid://2qbsfxti0leb"]

[ext_resource type="Script" uid="uid://b0kel6566h4ks" path="res://scripts/explodeBox.gd" id="1_d5wfv"]
[ext_resource type="Texture2D" uid="uid://cxn0k05mgd62y" path="res://assets/SciAssets/SciSpriteSheet.png" id="2_h6g1i"]
[ext_resource type="Texture2D" uid="uid://bssrpnorek8o1" path="res://assets/SciAssets/SciSplodeSheet.png" id="3_h6g1i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lnu2h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h6g1i"]
size = Vector2(10, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_68404"]
size = Vector2(10, 10)

[node name="ExplodeBox" type="Node2D"]

[node name="explodingBox" type="CharacterBody2D" parent="."]
collision_layer = 6
collision_mask = 6
script = ExtResource("1_d5wfv")
countdown = 8
metadata/exploded = false

[node name="Sprite2D" type="Sprite2D" parent="explodingBox"]
show_behind_parent = true
light_mask = 2
visibility_layer = 2
z_index = 1
position = Vector2(0, -4)
texture = ExtResource("2_h6g1i")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="explodingBox"]
scale = Vector2(0.7, 0.7)
shape = SubResource("RectangleShape2D_lnu2h")

[node name="Label" type="Label" parent="explodingBox"]
z_index = 2
offset_left = -6.0
offset_top = -8.0
offset_right = 26.0
offset_bottom = 15.0
scale = Vector2(0.366483, 0.388122)
text = "Null"
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 1

[node name="RayCast2D" type="RayCast2D" parent="explodingBox"]
target_position = Vector2(0, -16)
collision_mask = 15
collide_with_areas = true

[node name="ExplosionRadius" type="RayCast2D" parent="explodingBox"]
target_position = Vector2(0, -32)
collision_mask = 14

[node name="Fire" type="Node2D" parent="explodingBox"]
visible = false

[node name="FireSprite4" type="Sprite2D" parent="explodingBox/Fire"]
position = Vector2(0, 23)
rotation = -1.5708
scale = Vector2(1.18, 1)
texture = ExtResource("3_h6g1i")
region_enabled = true
region_rect = Rect2(32, 32, 32, 16)

[node name="FireSprite3" type="Sprite2D" parent="explodingBox/Fire"]
position = Vector2(23, -1.5)
rotation = -3.14159
texture = ExtResource("3_h6g1i")
region_enabled = true
region_rect = Rect2(32, 32, 32, 16)

[node name="FireSprite" type="Sprite2D" parent="explodingBox/Fire"]
position = Vector2(-23, -1.5)
texture = ExtResource("3_h6g1i")
region_enabled = true
region_rect = Rect2(32, 32, 32, 16)

[node name="FireUpArea" type="Area2D" parent="explodingBox/Fire"]
position = Vector2(0, -16)
collision_layer = 0

[node name="FireUpColl" type="CollisionShape2D" parent="explodingBox/Fire/FireUpArea"]
position = Vector2(0, -5.5)
shape = SubResource("RectangleShape2D_h6g1i")
debug_color = Color(0.97251, 0.106286, 0.326916, 0.42)

[node name="FireDownArea" type="Area2D" parent="explodingBox/Fire"]
position = Vector2(0, 16)
rotation = 3.14159
collision_layer = 0

[node name="FireDownColl" type="CollisionShape2D" parent="explodingBox/Fire/FireDownArea"]
position = Vector2(0, -5.5)
shape = SubResource("RectangleShape2D_h6g1i")
debug_color = Color(0.97251, 0.106286, 0.326916, 0.42)

[node name="FireRightArea" type="Area2D" parent="explodingBox/Fire"]
position = Vector2(16, 0)
rotation = 1.5708
collision_layer = 0

[node name="FireRightColl" type="CollisionShape2D" parent="explodingBox/Fire/FireRightArea"]
position = Vector2(0, -5.5)
shape = SubResource("RectangleShape2D_h6g1i")
debug_color = Color(0.97251, 0.106286, 0.326916, 0.42)

[node name="FireLeftArea" type="Area2D" parent="explodingBox/Fire"]
position = Vector2(-16, 0)
rotation = -1.5708
collision_layer = 0

[node name="FireLeftColl" type="CollisionShape2D" parent="explodingBox/Fire/FireLeftArea"]
position = Vector2(0, -5.5)
shape = SubResource("RectangleShape2D_h6g1i")
debug_color = Color(0.97251, 0.106286, 0.326916, 0.42)

[node name="FireSprite2" type="Sprite2D" parent="explodingBox/Fire"]
position = Vector2(0, -23)
rotation = 1.5708
texture = ExtResource("3_h6g1i")
region_enabled = true
region_rect = Rect2(32, 32, 32, 16)

[node name="ExplodeBoxArea" type="Area2D" parent="explodingBox"]
collision_layer = 2147483648
collision_mask = 2147483663

[node name="ExplodeBoxAreaColl" type="CollisionShape2D" parent="explodingBox/ExplodeBoxArea"]
shape = SubResource("RectangleShape2D_68404")
debug_color = Color(0.547023, 0.40472, 0.9973, 0.42)

[connection signal="area_entered" from="explodingBox/Fire/FireUpArea" to="explodingBox" method="_on_fire_up_area_area_entered"]
[connection signal="area_entered" from="explodingBox/Fire/FireDownArea" to="explodingBox" method="_on_fire_down_area_area_entered"]
[connection signal="area_entered" from="explodingBox/Fire/FireRightArea" to="explodingBox" method="_on_fire_right_area_area_entered"]
[connection signal="area_entered" from="explodingBox/Fire/FireLeftArea" to="explodingBox" method="_on_fire_left_area_area_entered"]
